# chemistru

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: all.yml  elements-inner.yml  elements-macros.yml  elements.yml  rust.yml
chemistru-elements/: Cargo.toml  README.md
chemistru-elements-inner/: Cargo.toml  README.md  db.json
chemistru-elements-inner/src/: atomic.rs  electron.rs  lib.rs  misc.rs  physical.rs  raw.rs  table.rs  tokens.rs  utils.rs
chemistru-elements-macro/: Cargo.toml  README.md
chemistru-elements-macro/src/: lib.rs
chemistru-elements/src/: lib.rs
chemistru-modelling/: Cargo.toml
chemistru-modelling/src/molecule/: id.rs  mod.rs
chemistru-subatomic/: Cargo.toml
chemistru-subatomic/src/: bosons.rs
