[workspace]
resolver = "3"
members = ["chemistru-elements", "chemistru-elements-inner", "chemistru-elements-macro", "chemistru-subatomic"]
exclude = ["chemistru-modelling"]

[profile.dev]
codegen-units = 256
opt-level = 1

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[workspace.lints.clippy]
missing_const_for_fn = "deny"
pedantic = "deny"
unwrap_used = "deny"
unsafe_code = "forbid"
