[package]
name = "chemistru-elements-inner"
description = "Basic Elemental Representation"
readme = "README.md"
documentation = "https://docs.rs/chemistru-elements-inner"
repository = "https://github.com/Ross-Morgan/chemistru"
homepage = "https://github.com/Ross-Morgan/chemistru/tree/main/chemistru-elements-inner"

version = "1.1.0"
edition = "2024"
license = "BSD-3-Clause"

keywords = ["chemistry", "elements"]
categories = ["science"]

authors = ["Ross Morgan"]

include = ["/src", "db.json"]

[lints]
workspace = true

[features]
default = []
to_tokens = ["quote", "proc-macro2"]

[dependencies]
intentional = "0.1.1"
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
const_panic = "0.2.15"
strum_macros = "0.27.2"
proc-macro2 = { version = "1.0.101", optional = true}
quote = { version = "1.0.40", optional = true }
