[package]
name = "chemistru-elements-macro"
description = "Macros for use in the chemistru crates"
readme = "README.md"
documentation = "https://docs.rs/chemistru-elements-macro"
repository = "https://github.com/Ross-Morgan/chemistru"
homepage = "https://github.com/Ross-Morgan/chemistru/tree/main/chemistru-elements-macro"

version = "1.0.0"
edition = "2024"
license = "BSD-3-Clause"

keywords = ["chemistry", "chemical", "elements"]
categories = ["sciences"]

authors = ["Ross Morgan"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"

chemistru-elements-inner = { path = "../chemistru-elements-inner/", features = ["to_tokens"] }
